# think_kedhar

./: .env.example  .gitignore  README.md  medbrain-agents.html  medbrain-pitch.html  medbrain-replay.html  medbrain-tui.html  neo-replay.html  pyproject.toml
.workspace/: changelogs.md  codex_phase7_prompt.md  gaps.md  learnings.md  plan.md  todo.md  workspace.md
brain/: brain.db  memory.md  phase7_codex_last.md  phase7_codex_summary.md  phase7_report.md  questions.md
brain/concepts/: oz277.md  (+29 more)
corpus/: cds_queries.json  thresholds.json  topics.json  who_docs.md
docs/: sheet-coverage.md
exports/: master_sheet.xlsx  tui-viewer.html
medbrain/: __init__.py  config.py  db.py  enums.py  llm.py  models.py  sources_registry.py
prompts/: brain_questions.md  brain_synthesize.md  concept_condition.md  concept_medication.md  concept_note.md  dream_analogies.md  dream_compact.md  dream_flashcards.md  dream_gaps.md  dream_mnemonics.md  master_sheet_condition.md  master_sheet_medication.md  research_plan.md  student_extract.md  topic_note.md
scripts/: active_learner.py  api.py  brain.py  dream.py  export_master_sheet.py  export_vault.py  graph_html.py  graphify_run.py  ingest_pmid.py  init_db.py  orchestrate.py  phase7_query.py  phase7_run.py  phase7_tune.py  regen.py  student.py  tui.py
student/: _index.md
tests/: conftest.py  test_active_learner.py  test_brain.py  test_citation_gate.py  test_dream.py  test_graph.py  test_human_questions.py  test_models.py  test_obsidian_vault.py  test_orchestrator.py  test_phase1.py  test_phase7.py  test_regen.py  test_researcher.py
(+960 files in other folders)
